# rtt_ros2_pkg

./: .gitlab-ci.yml  CMakeLists.txt  package.xml  readme.md
scripts/: orocreate-colcon-pkg
template/: CMakeLists.txt  README.md  package.xml
template/launch/: example.launch.py
template/scripts/: deploy.lua
template/src/: pkgname-component.cpp  pkgname-component.hpp  pkgname-plugin.cpp
