<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>@(package)</name>
  <version>0.0.0</version>
  <description>@(description or f"Package {package}")</description>
  <maintainer email="@(maintainer_email or "orocos-dev@orocos.org")">@(maintainer_name or "Orocos Developers")</maintainer>
  <license>@(license or "Apache License 2.0")</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>

	<depend>rtt_ros2_std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
